basic function has finished

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -2,6 +2,6 @@
 <title>Hello from Flask</title>
 {% if name %}
   <h1>Hello {{ name }}!</h1>
-{% else %}
+{% else py -c%}
   <h1>Hello, World!</h1>
 {% endif %}
