--- a/templates/user.html
+++ b/templates/user.html
@@ -1,14 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-上午好
-<form action='/upload' method='post' enctype="multipart/form-data">
-    　　 <input type='file' name="image">
-    　　 <input type="submit" value="submit">
-</form>
-</body>
+    <head>
+        <meta charset="UTF-8"/>
+        <title>黑鸦的私人图床</title>
+        <link href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="../static/css/default.css">
+        <link href="../static/css/fileinput.min.css" media="all" rel="stylesheet" type="text/css" />
+        <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
+        <script src="../static/js/fileinput.min.js" type="text/javascript"></script>
+    </head>
+    <body>
+            <div class="htmleaf-container">
+                <header class="htmleaf-header">
+                    <h1>Upload File <span>the site is use to store some static resources such as image,text...</span></h1>
+                    <div class="htmleaf-links">
+                        <a class="htmleaf-icon icon-htmleaf-home-outline" href="javascript:void(0);" title="" target="_blank"></a>
+                        <a class="htmleaf-icon icon-htmleaf-arrow-forward-outline" href="/logout" title="logout" target="_self"></a>
+                    </div>
+                </header>
+                <div class="container kv-main">
+                    <form enctype="multipart/form-data">
+                        <div class="form-group">
+                            <input id="file-4" type="file" class="file" data-upload-url="/upload" multiple="true" name="image">
+                        </div>
+                        <hr>
+                        <div class="form-group">
+                            <button class="btn btn-warning" type="button">Disable Test</button>
+                            <button class="btn btn-info" type="reset">Refresh Test</button>
+                            <button class="btn btn-primary" type="submit">Submit</button>
+                            <button class="btn btn-default" type="reset">Reset</button>
+                        </div>
+                        <hr>
+                    </form>
+                    <hr>
+                </div>
+            </div>
+    </body>
+	<script type="text/javascript">
+    $("#file-0").fileinput({
+        'allowedFileExtensions' : ['jpg', 'png','gif'],
+    });
+    $("#file-1").fileinput({
+        uploadUrl: '#', // you must set a valid URL here else you will get an error
+        allowedFileExtensions : ['jpg', 'png','gif'],
+        overwriteInitial: false,
+        maxFileSize: 1000,
+        maxFilesNum: 10,
+        //allowedFileTypes: ['image', 'video', 'flash'],
+        slugCallback: function(filename) {
+            return filename.replace('(', '_').replace(']', '_');
+        }
+	});
+	$("#file-3").fileinput({
+		showUpload: false,
+		showCaption: false,
+		browseClass: "btn btn-primary btn-lg",
+		fileType: "any",
+        previewFileIcon: "<i class='glyphicon glyphicon-king'></i>"
+	});
+	$("#file-4").fileinput({
+	});
+    $(".btn-warning").on('click', function() {
+        if ($('#file-4').attr('disabled')) {
+            $('#file-4').fileinput('enable');
+        } else {
+            $('#file-4').fileinput('disable');
+        }
+    });
+    $(".btn-info").on('click', function() {
+        $('#file-4').fileinput('refresh', {previewClass:'bg-info'});
+    });
+    $(document).ready(function() {
+        $("#test-upload").fileinput({
+            'showPreview' : false,
+            'allowedFileExtensions' : ['jpg', 'png','gif'],
+            'elErrorContainer': '#errorBlock'
+        });
+    });
+	</script>
 </html>
